login/signup webpage

--- a/views/users/facultyLogin.ejs
+++ b/views/users/facultyLogin.ejs
@@ -1,8 +1,8 @@
-<%- include ("./partials/header") %>
+<%- include ("../partials/header") %>
 <head>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/studentLogin.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/users/studentLogin.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/stylesheets/facultyLogin.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/users/facultyLogin.css">
 </head>
 <div class="login">
     <h3>FACULTY LOGIN</h3>
@@ -22,4 +22,4 @@
     </div>
 </div>
 
-<%- include ("./partials/footer") %>
+<%- include ("../partials/footer") %>
