--- a/views/users/studentLogin.ejs
+++ b/views/users/studentLogin.ejs
@@ -1,6 +1,6 @@
-<%- include ("./partials/header") %>
+<%- include ("../partials/header") %>
 <head>
-    <link rel="stylesheet" type="text/css" href="/stylesheets/studentLogin.css">
+    <link rel="stylesheet" type="text/css" href="/stylesheets/users/studentLogin.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 <div class="container" id="signin">
@@ -24,12 +24,12 @@
         </form>
         <div class="container" id="options">
             <a>Forgot password?</a> <br>
-            <a id="a" href="/faculty/login">Faculty Login</a>
+            <a id="a" href="users//faculty/login">Faculty Login</a>
         </div>
     </div>
     <div class="login" id="option3">
-        <form>
-            <label for="name">NAME (or Roll Number)</label>
+        <form action="/users/student/new" method="POST">
+            <label for="name">NAME</label>
             <div class="form-group">
                 <input type="text" name="name" id="name">
             </div>
@@ -50,13 +50,13 @@
         </div>
 </div>
 </div>
-<%- include ("./partials/footer") %>
+<%- include ("../partials/footer") %>
 <script>
     if (screen && screen.width > 900) {
-    document.write('<script type="text/javascript" src="../javascripts/studentLoginWeb.js"><\/script>');}
+    document.write('<script type="text/javascript" src="/javascripts/users/studentLoginWeb.js"><\/script>');}
 </script>
     
 <script>
     if (screen && screen.width < 900) {
-    document.write('<script type="text/javascript" src="../javascripts/studentLoginMobile.js"><\/script>');}
+    document.write('<script type="text/javascript" src="/javascripts/users/studentLoginMobile.js"><\/script>');}
 </script>
