--- a/views/users/studentLogin.ejs
+++ b/views/users/studentLogin.ejs
@@ -24,7 +24,7 @@
         </form>
         <div class="container" id="options">
             <a>Forgot password?</a> <br>
-            <a id="a" href="users//faculty/login">Faculty Login</a>
+            <a id="a" href="user/faculty/login">Faculty Login</a>
         </div>
     </div>
     <div class="login" id="option3">
