--- a/views/users/studentProfile.ejs
+++ b/views/users/studentProfile.ejs
@@ -21,6 +21,6 @@
 
 <hr style="width: 75%; text-align:left;margin-left:0">
 
-<div class="edit"><button class="btn">Sign out</button></div><div class="d"><button class="btn">Change Password</button></div>
+<div class="edit"><a href='../student/login' class="btn">Sign out</a></div><div class="d"><button class="btn">Change Password</button></div>
 
 <%- include ("../partials/footer") %>
