user name display and course info page

--- a/views/users/studentLogin.ejs
+++ b/views/users/studentLogin.ejs
@@ -29,9 +29,9 @@
     </div>
     <div class="login" id="option3">
         <form action="/users/student/new" method="POST">
-            <label for="name">NAME</label>
+            <label for="name">ROLL NUMBER</label>
             <div class="form-group">
-                <input type="text" name="name" id="name">
+                <input type="text" name="rno" id="rno">
             </div>
             <label for="email">EMAIL</label>
             <div class="form-group">
