--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,14 +21,22 @@
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="navLinks">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item pop">
-                        <a href="/view" class="nav-link">Documents</a>
+                        <a href="/documents" class="nav-link">Documents</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/about">Classroom</a>
+                    <a class="nav-link" href="/classroom">Classroom</a>
                 </li>
-                <li class="nav-item pop">
-                        <a href="/profile" class="nav-link">User</a>
-                </li>
+                <% if(user) {%>
+                    <li class="nav-item pop">
+                        <a href="/users/student/profile" class="nav-link">
+                            <%= user.rollNumber %>
+                        </a>
+                    </li>
+                <% } else { %>
+                    <li class="nav-item pop">
+                        <a href="/users/student/login" class="nav-link">User</a>
+                    </li>
+                <% } %>
             </ul>
         </div>
     </nav>
