--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,1 +1,12 @@
-<h1> Home Page </h1>
+<%- include ("./partials/header") %>
+<head>
+    <link rel="stylesheet" type="text/css" href="/stylesheets/index.css">
+</head>
+<div class="container" id="splash">
+    <h1>Create and manage all your digital course files!</h1>
+    <a href="/users/student/login"><button class="bubbly-button" id="btn">Get Started!</button></a>
+
+</div>
+
+<%- include ("./partials/footer") %>
+<script type="text/javascript" src="/javascripts/index.js"></script>
