--- a/views/course/courseInfo.ejs
+++ b/views/course/courseInfo.ejs
@@ -13,4 +13,31 @@
     <strong></strong>
 </div>
 
+<div class = "container" id = "basicDocs">
+    <div class = "doc">
+        <div class= "preview">
+            <img src="/images/nodocimage.svg" alt="No Document Available">
+        </div>
+        <div class = "aboutDoc">
+            <strong>Course Objectives</strong>
+        </div>
+    </div>
+    <div class = "doc">
+        <div class= "preview">
+            <img src="/images/nodocimage.svg" alt="No Document Available">
+        </div>
+        <div class = "aboutDoc">
+            <strong>Course Plan</strong>
+        </div>
+    </div>
+    <div class = "doc">
+        <div class= "preview">
+            <img src="/images/nodocimage.svg" alt="No Document Available">
+        </div>
+        <div class = "aboutDoc">
+            <strong>Syllabus</strong>
+        </div>
+    </div>
+</div>
+
 <%- include ("../partials/footer") %>
