--- a/views/users/facultyProfile.ejs
+++ b/views/users/facultyProfile.ejs
@@ -16,18 +16,18 @@
             <div class="personal">
                 <hr style="width: 25%; margin-left: 0; border: 1px solid black;">
                 <label for="name" class="d">Name :</label>
-                <input id="name" type="text" value="Zack Snyder" readonly>
+                <input id="name" type="text" value="Christopher Nolan" readonly>
                 <label for="dob" class="d">Date of birth :</label>
-                <input id="dob" type="date" value="2001-03-02" readonly>
+                <input id="dob" type="date" value="1978-03-02" readonly>
                 <hr>
                 <label for="email" class="e">Email :</label>
-                <input id="email" type="email" value="zack@gmail.com" readonly>
+                <input id="email" type="email" value="nolan@gmail.com" readonly>
                 <hr>
                 <label for="address" class="d">Address :</label>
-                <input id="address" type="text" value="21 backers street" readonly>
+                <input id="address" type="text" value="20 Ingram street" readonly>
                 
                 <label for="phn" class="d">Phone number :</label>
-                <input id="phn" type="number" value="8522416230" min="0000000000" max="9999999999" readonly>
+                <input id="phn" type="number" value="8533416320" min="0000000000" max="9999999999" readonly>
             </div>
             <hr style="border: 2px solid black;">
         </form>
@@ -37,20 +37,20 @@
 <hr style="width: 75%; text-align:left;margin-left:0">
 
 <div class="d">
-    <a class="p">VIEW ACADEMIC DETAILS</a>
+    <a class="p">VIEW PROFESSIONAL DETAILS</a>
     <div class="p-content">
         <form>
             <div class="academic">
                 <hr style="width: 25%; margin-left: 0; border: 1px solid black;">
                 <label for="dname" class="d">Depatment name :</label>
                 <input id="dname" type="text" value="Computer science" readonly>
-                <label for="rno" class="d">Roll number :</label>
-                <input id="rno" type="text" value="18359" readonly>
+                <label for="rno" class="d">Designation :</label>
+                <input id="rno" type="text" value="H.O.D." readonly>
                 <hr>
-                <label for="cgpa" class="d">CGPA :</label>
-                <input id="cgpa" type="number" step='0.01' value="8.35" readonly>
-                <label for="sgpa" class="d">SGPA :</label>
-                <input id="sgpa" type="number" step='0.01' value="8.35" readonly>
+                <label for="cgpa" class="d">Qualification :</label>
+                <input id="cgpa" type="text" value="Ph.D." readonly>
+                <label for="sgpa" class="d">Salary :</label>
+                <input id="sgpa" type="number" value="3000000" readonly>
             </div>
             <hr style="border: 2px solid black;">
         </form>
@@ -64,8 +64,8 @@
 
 <div class="container">
     <div class="btn-r"><a href="" class="btn">Change Password</a></div>
-    <div class="btn-c"><a href="../student/profile/edit" class="btn">edit</a></div>
-    <div class="btn-l"><a href="../student/login" class="btn">Sign-out</a></div>
+    <div class="btn-c"><a href="../faculty/profile/edit" class="btn">edit</a></div>
+    <div class="btn-l"><a href="../faculty/login" class="btn">Sign-out</a></div>
 </div>
 
 <%- include ("../partials/footer") %>
