--- a/public/stylesheets/course/courseInfo.css
+++ b/public/stylesheets/course/courseInfo.css
@@ -10,6 +10,8 @@
     font-family: 'Montserrat', sans-serif;
     background-color: #A8DADC;
     padding: 15px;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 #basicDocs {
@@ -37,3 +39,4 @@
     text-align: center;
     font-family: 'Montserrat', sans-serif;
 }
+
