--- a/public/stylesheets/course/courseInfo.css
+++ b/public/stylesheets/course/courseInfo.css
@@ -23,16 +23,23 @@
 }
 
 .doc {
-    background-color: #F1FAEE;
+    background-color: #b5e0da;
     width: 250px;
     height: 250px;
-    border: #A8DADC 3px solid;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2),
+        0 5px 5px 0 rgba(0, 0, 0, 0.24);
     cursor: pointer;
+    padding: 4%;
+}
+
+.doc:hover {
+    transform: scale(1.1);
 }
 
 .preview {
     width: 100%;
     height: 90%;
+    text-align: center;
 }
 
 .aboutDoc {
@@ -40,3 +47,6 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+#rightDiv {
+    margin: auto;
+}
