--- a/views/users/studentEditProfile.ejs
+++ b/views/users/studentEditProfile.ejs
@@ -9,9 +9,9 @@
         <h3 style="padding: 0 22px;">PERSONAL DETAILS</h3>
         <hr style="width: 25%; margin-left: 0; border: 1px solid black;">
         <label for="name" class="d">Name :</label>
-        <input id="name" type="text" value="Zack Snyder">
+        <input id="name" type="text" value="Zack Snyder" name="Name">
         <label for="dob" class="d">Date of birth :</label>
-        <input id="dob" type="date" value="2001-03-02">
+        <input id="dob" type="date" value="2001-03-02" name="DOB">
         <hr>
         <label for="email" class="e">Email :</label>
         <input id="email" type="email" value="zack@gmail.com">
