--- a/views/users/studentEditProfile.ejs
+++ b/views/users/studentEditProfile.ejs
@@ -9,32 +9,32 @@
         <h3 style="padding: 0 22px;">PERSONAL DETAILS</h3>
         <hr style="width: 25%; margin-left: 0; border: 1px solid black;">
         <label for="name" class="d">Name :</label>
-        <input id="name" type="text" value="Zack Snyder">
+        <input id="name" type="text" value="profileInformation.Name" name="Name">
         <label for="dob" class="d">Date of birth :</label>
-        <input id="dob" type="date" value="2001-03-02">
+        <input id="dob" type="date" value="profileInformation.DOB" name="DOB">
         <hr>
         <label for="email" class="e">Email :</label>
-        <input id="email" type="email" value="zack@gmail.com">
+        <input id="email" type="email" value="profileInformation.email" name="email">
         <hr>
         <label for="address" class="d">Address :</label>
-        <input id="address" type="text" value="21 backers street">
+        <input id="address" type="text" value="profileInformation.Address" name="Address">
         
         <label for="phn" class="d">Phone number :</label>
-        <input id="phn" type="number" value="8522416230" min="0000000000" max="9999999999">
+        <input id="phn" type="number" value="profileInformation.Phone" min="0000000000" max="9999999999" name="Phone">
     </div>
     <hr style="border: 2px solid black;">
     <div class="academic">
         <h3 style="padding: 0 22px;">ACADEMIC DETAILS</h3>
         <hr style="width: 25%; margin-left: 0; border: 1px solid black;">
         <label for="dname" class="d">Depatment name :</label>
-        <input id="dname" type="text" value="Computer science">
+        <input id="dname" type="text" value="profileInformation.deptName" name="deptName">
         <label for="rno" class="d">Roll number :</label>
-        <input id="rno" type="text" value="18359">
+        <input id="rno" type="text" value="profileInformation.rollNumber" name="rollNumber">
         <hr>
         <label for="cgpa" class="d">CGPA :</label>
-        <input id="cgpa" type="number" step='0.01' value="8.35">
+        <input id="cgpa" type="number" step='0.01' value="profileInformation.CGPA" name="CGPA">
         <label for="sgpa" class="d">SGPA :</label>
-        <input id="sgpa" type="number" step='0.01' value="8.35">
+        <input id="sgpa" type="number" step='0.01' value="profileInformation.SGPA" name="SGPA">
     </div>
     <hr style="border: 2px solid black;">
     <input class="btn" type="submit" value="Submit">
