--- a/public/stylesheets/users/studentProfile.css
+++ b/public/stylesheets/users/studentProfile.css
@@ -35,6 +35,10 @@
   display: none;
 }
 
+.p:hover + .p-content{
+  display: block;
+}
+
 .btn {
     font-family: 'Montserrat', sans-serif; 
     border-radius:12px;
