--- a/views/course/courseInfo.ejs
+++ b/views/course/courseInfo.ejs
@@ -23,7 +23,7 @@
     <div class = "doc">
         <div class= "preview">
             <% if(CO) { %>
-                <a href="<%=url%>course/<%=course.courseID%>CO.pdf"><img src="/images/redirect.png" style="width: 70%; height: 70%; text-align: center;" alt="CO"></a>
+                <a href="/docs/DS01CO.pdf"><img src="/images/redirect.png" style="width: 70%; height: 70%; text-align: center;" alt="CO"></a>
             <% } else { %>
                 <img src="/images/nodocimage.svg" alt="No Document Available">
             <% } %>
