--- a/views/users/facultyProfile.ejs
+++ b/views/users/facultyProfile.ejs
@@ -16,18 +16,18 @@ cdcd<%- include ("../partials/header") %>
             <div class="personal">
                 <hr style="width: 25%; margin-left: 0; border: 1px solid black;">
                 <label for="name" class="d">Name :</label>
-                <input id="name" type="text" value="profileInformation.Name" readonly>
+                <%= profileInformation.Name %>
+                &nbsp;&nbsp;&nbsp;&nbsp;
                 <label for="dob" class="d">Date of birth :</label>
-                <input id="dob" type="date" value="profileInformation.DOB" readonly>
+                <%= profileInformation.DOB %>
                 <hr>
                 <label for="email" class="e">Email :</label>
-                <input id="email" type="email" value="profileInformation.email" readonly>
+                <%= profileInformation.email %>
                 <hr>
                 <label for="address" class="d">Address :</label>
-                <input id="address" type="text" value="profileInformation.Address" readonly>
-                
+                <%= profileInformation.Address %>
                 <label for="phn" class="d">Phone number :</label>
-                <input id="phn" type="number" value="profileInformation.Phone" min="0000000000" max="9999999999" readonly>
+                <%= profileInformation.Phone %>
             </div>
             <hr style="border: 2px solid black;">
         </form>
@@ -43,13 +43,13 @@ cdcd<%- include ("../partials/header") %>
             <div class="academic">
                 <hr style="width: 25%; margin-left: 0; border: 1px solid black;">
                 <label for="dname" class="d">Depatment name :</label>
-                <input id="dname" type="text" value="profileInformation.deptName" readonly>
+                <%= profileInformation.deptName %>
+                <hr>
                 <label for="rno" class="d">Designation :</label>
-                <input id="rno" type="text" value="profileInformation.des" readonly>
+                <%= profileInformation.des %>
                 <hr>
                 <label for="cgpa" class="d">Qualification :</label>
-                <input id="cgpa" type="text" value="profileInformation.Qual" readonly>
-                
+                <%= profileInformation.qual %>
             </div>
             <hr style="border: 2px solid black;">
         </form>
@@ -57,9 +57,6 @@ cdcd<%- include ("../partials/header") %>
 </div>
 
 <hr style="width: 75%; text-align:left;margin-left:0">
-
-
-
 
 <div class="container">
     <div class="btn-r"><a href="" class="btn">Change Password</a></div>
