--- a/views/users/studentProfile.ejs
+++ b/views/users/studentProfile.ejs
@@ -15,18 +15,19 @@
             <div class="personal">
                 <hr style="width: 25%; margin-left: 0; border: 1px solid black;">
                 <label for="name" class="d">Name :</label>
-                <input id="name" type="text" value="<%= profileInformation.Name %>" readonly>
+                <%= profileInformation.Name %>
+                &nbsp;&nbsp;&nbsp;&nbsp;
                 <label for="dob" class="d">Date of birth :</label>
-                <input id="dob" type="date" value="<%= profileInformation.DOB %>" readonly>
+                <%= profileInformation.DOB %>
                 <hr>
                 <label for="email" class="e">Email :</label>
-                <input id="email" type="email" value="<%= profileInformation.email %>" readonly>
+                <%= profileInformation.email %>
                 <hr>
                 <label for="address" class="d">Address :</label>
-                <input id="address" type="text" value="<%= profileInformation.Address %>" readonly>
-                
+                <%= profileInformation.Address %>
+                &nbsp;&nbsp;&nbsp;&nbsp;
                 <label for="phn" class="d">Phone number :</label>
-                <input id="phn" type="number" value="<%= profileInformation.Phone %>" min="0000000000" max="9999999999" readonly>
+                <%= profileInformation.Phone %>
             </div>
             <hr style="border: 2px solid black;">
         </form>
@@ -42,14 +43,13 @@
             <div class="academic">
                 <hr style="width: 25%; margin-left: 0; border: 1px solid black;">
                 <label for="dname" class="d">Depatment name :</label>
-                <input id="dname" type="text" value="<%= profileInformation.deptName %>" readonly>
-                <label for="rno" class="d">Roll number :</label>
-                <input id="rno" type="text" value="<%= profileInformation.rollNumber %>" readonly>
+                <%= profileInformation.deptName %>
                 <hr>
                 <label for="cgpa" class="d">CGPA :</label>
-                <input id="cgpa" type="number" step='0.01' value="<%= profileInformation.CGPA %>" readonly>
+                <%= profileInformation.CGPA %>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <label for="sgpa" class="d">SGPA :</label>
-                <input id="sgpa" type="number" step='0.01' value="<%= profileInformation.SGPA %>" readonly>
+                <%= profileInformation.SGPA %>
             </div>
             <hr style="border: 2px solid black;">
         </form>
