--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,7 +23,7 @@
                 <li class="nav-item pop">
                         <a href="/documents" class="nav-link">Documents</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item pop">
                     <a class="nav-link" href="/classroom">Classroom</a>
                 </li>
                 <% if(user) {%>
