--- a/views/users/facultyProfile.ejs
+++ b/views/users/facultyProfile.ejs
@@ -1,4 +1,4 @@
-cdcd<%- include ("../partials/header") %>
+<%- include ("../partials/header") %>
 <head>
     <link rel="stylesheet" type="text/css" href="/stylesheets/users/studentProfile.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
@@ -8,26 +8,25 @@ cdcd<%- include ("../partials/header") %>
 </div>
 
 
-
 <div class="d">
-    <a class="p">VIEW PERSONAL DETAILS</a>
-    <div class="p-content">
+    <a class="p" id="det1">VIEW PERSONAL DETAILS</a>
+    <div class="p-content" id="cont1">
         <form >
             <div class="personal">
                 <hr style="width: 25%; margin-left: 0; border: 1px solid black;">
                 <label for="name" class="d">Name :</label>
-                <input id="name" type="text" value="profileInformation.Name" readonly>
+                <input id="name" type="text" value="<%= profileInformation.Name %>" readonly>
                 <label for="dob" class="d">Date of birth :</label>
-                <input id="dob" type="date" value="profileInformation.DOB" readonly>
+                <input id="dob" type="date" value="<%= profileInformation.DOB %>" readonly>
                 <hr>
                 <label for="email" class="e">Email :</label>
-                <input id="email" type="email" value="profileInformation.email" readonly>
+                <input id="email" type="email" value="<%= profileInformation.email %>" readonly>
                 <hr>
                 <label for="address" class="d">Address :</label>
-                <input id="address" type="text" value="profileInformation.Address" readonly>
+                <input id="address" type="text" value="<%= profileInformation.Address %>" readonly>
                 
                 <label for="phn" class="d">Phone number :</label>
-                <input id="phn" type="number" value="profileInformation.Phone" min="0000000000" max="9999999999" readonly>
+                <input id="phn" type="number" value="<%= profileInformation.Phone %>" min="0000000000" max="9999999999" readonly>
             </div>
             <hr style="border: 2px solid black;">
         </form>
@@ -37,19 +36,16 @@ cdcd<%- include ("../partials/header") %>
 <hr style="width: 75%; text-align:left;margin-left:0">
 
 <div class="d">
-    <a class="p">VIEW PROFESSIONAL DETAILS</a>
-    <div class="p-content">
+    <a class="p" id="det2">VIEW ACADEMIC DETAILS</a>
+    <div class="p-content" id="cont2">
         <form>
             <div class="academic">
                 <hr style="width: 25%; margin-left: 0; border: 1px solid black;">
                 <label for="dname" class="d">Depatment name :</label>
-                <input id="dname" type="text" value="profileInformation.deptName" readonly>
-                <label for="rno" class="d">Designation :</label>
-                <input id="rno" type="text" value="profileInformation.des" readonly>
+                <input id="dname" type="text" value="<%= profileInformation.deptName %>" readonly>
+                <label for="rno" class="d">Faculty ID:</label>
+                <input id="rno" type="text" value="<%= profileInformation.facultyID %>" readonly>
                 <hr>
-                <label for="cgpa" class="d">Qualification :</label>
-                <input id="cgpa" type="text" value="profileInformation.Qual" readonly>
-                
             </div>
             <hr style="border: 2px solid black;">
         </form>
@@ -65,8 +61,17 @@ cdcd<%- include ("../partials/header") %>
     <div class="btn-r"><a href="" class="btn">Change Password</a></div>
     <div class="btn-c"><a href="../faculty/profile/edit" class="btn">edit</a></div>
     <form action="/users/faculty/logout" method="POST">
-        <div class="btn-l"><button type="submit" class="btn">Sign-out</button></div>
-        </form>
+    <div class="btn-l"><button type="submit" class="btn">Sign-out</button></div>
+    </form>
 </div>
 
 <%- include ("../partials/footer") %>
+
+<script>
+    $('#det1').click(function(){
+        $('#cont1').toggle();
+    });
+    $('#det2').click(function(){
+        $('#cont2').toggle();
+    });
+</script>
