--- a/views/users/facultyProfile.ejs
+++ b/views/users/facultyProfile.ejs
@@ -1,4 +1,4 @@
-cdcd<%- include ("../partials/header") %>
+<%- include ("../partials/header") %>
 <head>
     <link rel="stylesheet" type="text/css" href="/stylesheets/users/studentProfile.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
