--- a/public/stylesheets/course/courseInfo.css
+++ b/public/stylesheets/course/courseInfo.css
@@ -10,4 +10,43 @@
     font-family: 'Montserrat', sans-serif;
     background-color: #A8DADC;
     padding: 15px;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+#basicDocs {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 5%;
+}
+
+.doc {
+    background-color: #b5e0da;
+    width: 250px;
+    height: 250px;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2),
+        0 5px 5px 0 rgba(0, 0, 0, 0.24);
+    cursor: pointer;
+    padding: 4%;
+}
+
+.doc:hover {
+    transform: scale(1.1);
+}
+
+.preview {
+    width: 100%;
+    height: 90%;
+    text-align: center;
+}
+
+.aboutDoc {
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+}
+
+#rightDiv {
+    margin: auto;
 }
