--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,6 +21,9 @@
         <div class="navbar-collapse collapse w-100 order-3 dual-collapse2" id="navLinks">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item pop">
+                    <a href="/course" class="nav-link">Courses</a>
+                </li>
+                <li class="nav-item pop">
                         <a href="/documents" class="nav-link">Documents</a>
                 </li>
                 <li class="nav-item pop">
