--- a/public/stylesheets/users/profile.css
+++ b/public/stylesheets/users/profile.css
@@ -290,3 +290,15 @@
     margin-right: auto;
   }
   
+.croomid {
+  color: black;
+  font-weight: bold;
+}
+
+h2 {
+  font-family: 'Rubik', sans-serif;
+}
+
+.filename {
+  color: white !important;
+}
