--- a/views/documents/index.ejs
+++ b/views/documents/index.ejs
@@ -34,6 +34,8 @@
                 <th scope="col">Name</th>
                 <th scope="col">Content Type</th>
                 <th scope="col">Date of Creation</th>
+                <th scope="col">Accessibility</th>
+                <th scope="col"></th>
               </tr>
             </thead>
             <tbody>
@@ -46,6 +48,14 @@
                     <td><a class="filename" target="_blank" href="<%=url%><%=file.name%>"><%= file.name.split('/')[3] %></a></td>
                     <td><%= file.metadata.contentType %></td>
                     <td><%= file.metadata.timeCreated.split('T')[0] %></td>
+                    <td class="vis" id="sernum<%=serNum%>"><%=file.metadata.metadata.visibility%></td>
+                    <td><i id="delete@<%=file.name%>@<%=serNum%>" title="Delete" data-toggle="modal" data-target="#modal1" class="trash icon delete-btn"></i>  
+                      <% if(file.metadata.metadata.visibility.localeCompare("public") == 0) { %> 
+                        <i id="vis@<%=file.name%>@<%=serNum%>" title="Change visibility" data-toggle="modal" data-target="#modal2" class="eye icon change-btn"></i>
+                      <% } else {%>
+                        <i id="vis@<%=file.name%>@<%=serNum%>" title="Change visibility" data-toggle="modal" data-target="#modal2" class="eye slash icon change-btn"></i>
+                      <% } %>
+                    </td>
                   </tr>
               <% }) %>
             </tbody>
@@ -61,8 +71,59 @@
         <h2>sdgfh</h2>
     </div>
   </div>
+</div>
 
-  
+<div class="modal fade" id="modal1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Confirmation</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to delete this file?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-danger" id="deletefilebtn">Delete</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="modal fade" id="modal2" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Confirmation</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Are you sure you want to change the visibility?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" id="visBTN">Yes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<form id="changeVisForm" action="/documents/updateVisibility" method="POST" style="display: none;">
+  <input id="fileNameForm" name="fileNameForm">;
+  <input id="visForm" name="visForm">
+</form>
+
+<form id="deleteFileForm" action="/documents/delete" method="POST" style="display: none;">
+  <input id="fileNameForm2" name="fileNameForm2">;
+</form>
 
 <%- include ("../partials/footer") %>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 <script type="text/javascript" src="/javascripts/documents/index.js"></script>
