--- a/views/users/studentLogin.ejs
+++ b/views/users/studentLogin.ejs
@@ -11,7 +11,7 @@
     </div>
     <div class="dummy">
     <div class="login" id="option2">
-        <form style="padding-top: 100px;" method="POST" action = "/users/student/login">
+        <form style="padding-top: 100px;" type="file" method="POST" action = "/users/student/login">
             <label for="email">EMAIL</label>
             <div class="form-group">
                 <input type="text" name="email" id="email">
