--- a/views/documents/index.ejs
+++ b/views/documents/index.ejs
@@ -22,8 +22,11 @@
     <a class="item" id="savedDoc">
       Saved Documents
       <!-- <div class="ui label">1</div> -->
+    </a> 
+    <a class="item" id="upload">
+      Upload Documents
     </a>
-  </div>
+</div>
 
   <div class="contentDiv">
     <div class="content ui segment" id="one">
