--- a/views/users/studentEditProfile.ejs
+++ b/views/users/studentEditProfile.ejs
@@ -30,6 +30,19 @@
         <input id="phn" type="number" value="<%= profileInformation.Phone %>" min="0000000000" max="9999999999" name="Phone">
     </div>
     <hr style="border: 2px solid black;">
+    <div class="academic">
+        <h3 style="padding: 0 22px;">ACADEMIC DETAILS</h3>
+        <hr style="width: 25%; margin-left: 0; border: 1px solid black;">
+        <label for="dname" class="d">Depatment name :</label>
+        <input id="dname" type="text" value="<%= profileInformation.deptName %>" name="deptName">
+        <label for="rno" class="d">Roll number :</label>
+        <input id="rno" type="text" value="<%= profileInformation.rollNumber %>" name="rollNumber">
+        <hr>
+        <label for="cgpa" class="d">CGPA :</label>
+        <input id="cgpa" type="number" step='0.01' value="<%= profileInformation.CGPA %>" name="CGPA">
+        <label for="sgpa" class="d">SGPA :</label>
+        <input id="sgpa" type="number" step='0.01' value="<%= profileInformation.SGPA %>" name="SGPA">
+    </div>
     <hr style="border: 2px solid black;">
     <input class="btn" type="submit" value="Submit">
 </form>
